--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ jq = "^1.0.1"
 py4j = "^0.10.9"
 jupyter = "^1.0.0"
 requests = "^2.23.0"
+pytest = "^5.4.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
