--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ jupyter = "^1.0.0"
 requests = "^2.23.0"
 pytest = "^5.4.3"
 python-dotenv = "^0.13.0"
+nbdime = "^2.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
